--- a/index.html
+++ b/index.html
@@ -1,64 +1,109 @@
-```html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yapay Zeka Dünyası</title>
+    <title>ÖMER.AI | Yapay Zeka Fabrikası</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <div class="theme-switch-wrapper">
+            <button id="theme-toggle" onclick="toggleTheme()">🌓 Mod Değiştir</button>
+        </div>
+        <div class="logo">ÖMER.AI</div>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#ai-gallery">AI Sergi</a></li>
+            <li><a href="#hizmetler">Hizmetler</a></li>
+            <li><a href="#iletisim">İletişim</a></li>
+        </ul>
+    </nav>
 
-    <header>
-        <h1>Yapay Zeka Dünyası</h1>
-        <nav>
-            <ul>
-                <li><a href="#ai-gallery">Yapay Zeka Galeri</a></li>
-                <li><a href="#contact-form">İletişim Formu</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section id="home" class="hero">
+        <h1>Yazılım ve Yapay Zeka Fabrikası</h1>
+        <p>Geleceği kodla, görselleri mühürle.</p>
+        <button onclick="scrollProjects()">Projeleri Gör</button>
+    </section>
 
-    <section id="ai-gallery">
-        <h2>Yapay Zeka Galeri</h2>
-        <div class="gallery-container">
-            <div class="gallery-item">
-                <img src="https://via.placeholder.com/300x200/4444ff/ffffff?text=AI+Görüntüsü+1" alt="AI Görüntüsü 1">
-                <p>Açıklama 1: Yapay Zeka ile oluşturulmuş bir manzara.</p>
+    <section id="ai-gallery" class="gallery-container">
+        <h2 class="neon-text">Yapay Zeka Sergisi</h2>
+        <div class="slider-container">
+            <div class="slider-track" id="slider-track">
+                <div class="slide"><img src="soyut1.jpg" alt="AI 1"></div>
+                <div class="slide"><img src="soyut2.jpg" alt="AI 2"></div>
+                <div class="slide"><img src="soyut3.jpg" alt="AI 3"></div>
+                <div class="slide"><img src="soyut4.jpg" alt="AI 4"></div>
+                <div class="slide"><img src="soyut5.jpg" alt="AI 5"></div>
+                <div class="slide"><img src="soyut6.jpg" alt="AI 6"></div>
             </div>
-            <div class="gallery-item">
-                <img src="https://via.placeholder.com/300x200/4444ff/ffffff?text=AI+Görüntüsü+2" alt="AI Görüntüsü 2">
-                <p>Açıklama 2: Karmaşık bir algoritmanın görsel temsili.</p>
+            <button class="slider-btn prev" onclick="moveSlider(-1)">❮</button>
+            <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
+        </div>
+    </section>
+
+    <section id="hakkimda" class="about-section">
+        <h2 class="neon-text">Fabrika Zaman Tüneli</h2>
+        <div class="timeline">
+            <div class="checkpoint">
+                <h3>🚀 Başlangıç</h3>
+                <p>İlk kod mühürlendi, temel atıldı.</p>
             </div>
-            <div class="gallery-item">
-                <img src="https://via.placeholder.com/300x200/4444ff/ffffff?text=AI+Görüntüsü+3" alt="AI Görüntüsü 3">
-                <p>Açıklama 3: Bir robot portresi, yapay zeka tarafından tasarlandı.</p>
+            <div class="checkpoint">
+                <h3>🤖 AI Entegrasyonu</h3>
+                <p>ÖMER.AI asistanı fabrikanın beyni olarak devreye girdi.</p>
+            </div>
+            <div class="checkpoint">
+                <h3>🏭 Seri Üretim</h3>
+                <p>Yapay zeka sergisi ve modern arayüz tamamlandı.</p>
             </div>
         </div>
     </section>
 
-    <section id="contact-form">
-        <h2>İletişim Formu</h2>
-        <form id="contactForm">
-            <label for="name">Adınız:</label>
-            <input type="text" id="name" name="name" required>
+    <section id="hizmetler" class="services-section">
+        <h2 class="neon-text">Fabrika Çözümleri</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="icon">🧠</i>
+                <h3>Yapay Zeka Modelleme</h3>
+                <p>Gemini ve Imagen tabanlı otonom sistemler ve botlar geliştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🌐</i>
+                <h3>Siberpunk Web Tasarım</h3>
+                <p>Geleceğin estetiğini bugünün teknolojisiyle birleştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🚀</i>
+                <h3>Yazılım Otomasyonu</h3>
+                <p>İş akışlarını hızlandıran özel kodlanmış dijital araçlar.</p>
+            </div>
+        </div>
+    </section>
 
-            <label for="email">E-postanız:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Mesajınız:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Gönder</button>
-            <p id="form-message"></p>
+    <section id="iletisim" class="contact-section">
+        <h2 class="neon-text">Mühürlü Mesaj Bırak</h2>
+        <form id="contact-form">
+            <input type="text" placeholder="Adın veya Şirketin" required>
+            <input type="email" placeholder="E-posta Adresin" required>
+            <textarea placeholder="Proje detaylarını buraya mühürle..." rows="5" required></textarea>
+            <button type="submit" class="neon-button">Mührü Gönder</button>
         </form>
     </section>
 
+    <div id="ai-chat-widget" class="chat-container">
+        <div class="chat-header">🤖 ÖMER.AI Asistan</div>
+        <div id="chat-box" class="chat-messages"></div>
+        <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Patrona mesaj bırak...">
+            <button onclick="sendMessage()">Gönder</button>
+        </div>
+    </div>
+
     <footer>
-        <p>&copy; 2024 Yapay Zeka Dünyası</p>
+        <p>&copy; 2026 ÖMER.AI - Gelecek Burada Mühürlendi.</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-```
