V40: 6 Yeni Imagen 4.0 Eseri Vitrine Eklendi

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     <section id="ai-gallery" class="gallery-container">
         <h2 class="neon-text">Yapay Zeka Sergisi</h2>
         <div class="slider-container">
-            <div class="slider-track" id="slider-track">
-                <div class="slide"><img src="soyut1.jpg" alt="AI 1"></div>
-                <div class="slide"><img src="soyut2.jpg" alt="AI 2"></div>
-                <div class="slide"><img src="soyut3.jpg" alt="AI 3"></div>
-                <div class="slide"><img src="soyut4.jpg" alt="AI 4"></div>
-                <div class="slide"><img src="soyut5.jpg" alt="AI 5"></div>
-                <div class="slide"><img src="soyut6.jpg" alt="AI 6"></div>
-            </div>
+           <div class="slider-track" id="slider-track">
+               <div class="slide"><img src="img/proje1.jpg" alt="Imagen 4.0 Sanatı 1"></div>
+               <div class="slide"><img src="img/proje2.jpg" alt="Imagen 4.0 Sanatı 2"></div>
+               <div class="slide"><img src="img/proje3.jpg" alt="Imagen 4.0 Sanatı 3"></div>
+               <div class="slide"><img src="img/proje4.jpg" alt="Imagen 4.0 Sanatı 4"></div>
+               <div class="slide"><img src="img/proje5.jpg" alt="Imagen 4.0 Sanatı 5"></div>
+               <div class="slide"><img src="img/proje6.jpg" alt="Imagen 4.0 Sanatı 6"></div>
+           </div>
+
+              </div>
             <button class="slider-btn prev" onclick="moveSlider(-1)">❮</button>
             <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
         </div>
