V48: Gerçek Hizmetler ve İkonlar Mühürlendi

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="ai-lab" class="lab-container">
         <h2 class="neon-text">Imagen 4.0 Üretim Laboratuvarı</h2>
         <div class="lab-form-container">
-            <textarea id="prompt-input" placeholder="Hayal ettiğin görseli buraya yaz patron (örn: Siberpunk bir kurt)..." rows="4"></textarea>
+            <textarea id="prompt-input" placeholder="Hayal ettiğin görseli buraya yaz patron..." rows="4"></textarea>
             <button id="generate-image-btn" class="neon-button">Görseli Mühürle (Üret)</button>
             <div id="loading-indicator" class="loading-spinner" style="display: none;"></div>
         </div>
@@ -59,9 +59,21 @@
     <section id="hizmetler" class="services-section">
         <h2 class="neon-text">Fabrika Çözümleri</h2>
         <div class="services-grid">
-            <div class="service-card"><i>🧠</i><h3>AI Modelleme</h3><p>Otonom sistemler.</p></div>
-            <div class="service-card"><i>🌐</i><h3>Siberpunk Web</h3><p>Geleceğin tasarımı.</p></div>
-            <div class="service-card"><i>🚀</i><h3>Otomasyon</h3><p>Hızlı iş akışları.</p></div>
+            <div class="service-card">
+                <i class="icon">🧠</i>
+                <h3>Yapay Zeka Modelleme</h3>
+                <p>Gemini ve Imagen 4.0 tabanlı otonom sistemler ve akıllı botlar geliştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🌐</i>
+                <h3>Siberpunk Web Tasarım</h3>
+                <p>Geleceğin estetiğini modern arayüzlerle birleştiriyor, hızlı siteler mühürlüyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🚀</i>
+                <h3>Yazılım Otomasyonu</h3>
+                <p>İş akışlarını hızlandıran, Telegram entegreli özel yazılım çözümleri üretiyoruz.</p>
+            </div>
         </div>
     </section>
 
