V70: Kurşun Geçirmez Üretim Hattı

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 <div class="slide"><img src="img/proje1.jpg" alt="AI 1"></div>
                 <div class="slide"><img src="img/proje2.jpg" alt="AI 2"></div>
                 <div class="slide"><img src="img/proje3.jpg" alt="AI 3"></div>
-                <div class="slide"><img src="img/proje4.jpg" alt="AI 4"></div>
-                <div class="slide"><img src="img/proje5.jpg" alt="AI 5"></div>
-                <div class="slide"><img src="img/proje6.jpg" alt="AI 6"></div>
             </div> 
             <button class="slider-btn prev" onclick="moveSlider(-1)">❮</button>
             <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
@@ -43,14 +40,16 @@
     </section>
 
     <section id="ai-lab" class="contact-section">
-        <h2 class="neon-text">AI Üretim Laboratuvarı</h2>
-        <div id="contact-form" style="max-width: 800px; margin: 0 auto;">
-            <textarea id="prompt-input" placeholder="Hayal ettiğin görseli buraya yaz patron..." rows="4"></textarea>
-            <button id="generate-image-btn" class="neon-button" style="margin-top: 15px; width: 100%;">Görseli Mühürle (Üret)</button>
-            <div id="loading-indicator" style="display: none; margin-top: 15px; color: var(--accent-color);">⌛ Üretiliyor...</div>
-            <div id="image-output-container" style="margin-top: 25px; border: 1px dashed var(--accent-color); border-radius: 15px; min-height: 200px; display: flex; align-items: center; justify-content: center;">
-                <img id="generated-image" src="" alt="Üretilen Görsel" style="display: none; width: 100%; border-radius: 15px;">
-                <p id="image-placeholder" style="opacity: 0.5;">Eser burada belirecek...</p>
+        <h2 class="neon-text">Imagen 4.0 Üretim Hattı</h2>
+        <div style="max-width: 600px; margin: 0 auto;">
+            <textarea id="prompt-input" placeholder="Hayal ettiğin görseli mühürle patron..." rows="3" style="width:100%; margin-bottom:15px;"></textarea>
+            <button id="generate-image-btn" class="neon-button" style="width:100%;">Görseli Mühürle (Üret)</button>
+            
+            <div id="loading-indicator" style="display: none; color: #38bdf8; margin: 20px; font-weight: bold;">⌛ Fabrika çalışıyor, mühür basılıyor...</div>
+            
+            <div id="image-output-container" style="margin-top: 20px; border: 2px dashed #334155; border-radius: 15px; padding: 10px; min-height: 300px; display: flex; align-items: center; justify-content: center;">
+                <img id="generated-image" src="" alt="Üretilen Eser" style="display: none; max-width: 100%; border-radius: 10px; box-shadow: 0 0 20px rgba(56, 189, 248, 0.2);">
+                <p id="image-placeholder" style="opacity: 0.5;">Eser burada mühürlenecek...</p>
             </div>
         </div>
     </section>
@@ -58,18 +57,8 @@
     <section id="hakkimda" class="about-section">
         <h2 class="neon-text" style="text-align: center;">Fabrika Zaman Tüneli</h2>
         <div class="timeline">
-            <div class="checkpoint"><h3>🚀 Başlangıç</h3><p>İlk kod mühürlendi, temel atıldı.</p></div>
-            <div class="checkpoint"><h3>🤖 AI Entegrasyonu</h3><p>ÖMER.AI beyni devreye girdi.</p></div>
-            <div class="checkpoint"><h3>🏭 Seri Üretim</h3><p>Yapay zeka sergisi tamamlandı.</p></div>
-        </div>
-    </section>
-
-    <section id="hizmetler" class="services-section" style="padding: 2rem;">
-        <h2 class="neon-text" style="text-align: center;">Fabrika Çözümleri</h2>
-        <div class="services-grid">
-            <div class="service-card"><i class="icon">🧠</i><h3>AI Modelleme</h3><p>Otonom sistemler.</p></div>
-            <div class="service-card"><i class="icon">🌐</i><h3>Web Tasarım</h3><p>Siberpunk estetik.</p></div>
-            <div class="service-card"><i class="icon">🚀</i><h3>Otomasyon</h3><p>Özel dijital araçlar.</p></div>
+            <div class="checkpoint"><h3>🚀 Başlangıç</h3><p>İlk kod mühürlendi.</p></div>
+            <div class="checkpoint"><h3>🤖 AI Entegrasyonu</h3><p>ÖMER.AI devreye girdi.</p></div>
         </div>
     </section>
 
@@ -86,13 +75,9 @@
     <div id="ai-chat-widget" class="chat-container">
         <div class="chat-header">🤖 ÖMER.AI Asistan</div>
         <div id="chat-box" class="chat-messages"></div>
-        <div class="chat-input">
-            <input type="text" id="user-input" placeholder="Patrona yaz...">
-            <button onclick="sendMessage()">Gönder</button>
-        </div>
+        <div class="chat-input"><input type="text" id="user-input" placeholder="Patrona yaz..."><button onclick="sendMessage()">Gönder</button></div>
     </div>
 
-    <footer><p>&copy; 2026 ÖMER.AI - Gelecek Burada Mühürlendi.</p></footer>
     <script src="script.js"></script>
 </body>
 </html>
