Siteyi Kurtarma Operasyonu

--- a/index.html
+++ b/index.html
@@ -5,48 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ÖMER.AI | Fabrika</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="logo">ÖMER.AI</div>
         <ul>
-            <li><a href="#" onclick="alert('Yakında...')">Ana Sayfa</a></li>
-            <li><a href="#ai-lab">AI Laboratuvarı</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="#" onclick="window.location.reload()">Ana Sayfa</a></li>
+            <li><a href="#ai-gallery">Sergi</a></li>
+            <li><a href="#ai-lab">Üretim Hattı</a></li>
+            <li><a href="#iletisim">İletişim</a></li>
         </ul>
+        <button id="theme-toggle" onclick="toggleTheme()">🌓 Tema</button>
     </nav>
 
     <header class="hero">
-        <h1>Yazılım ve AI Fabrikası</h1>
+        <h1>YAZILIM VE AI FABRİKASI</h1>
         <p>Geleceği kodla, görselleri mühürle.</p>
+        <button onclick="document.getElementById('ai-lab').scrollIntoView({behavior:'smooth'})" class="neon-button">Üretime Başla</button>
     </header>
 
-    <section id="ai-lab" class="container">
-        <h2 class="section-title">AI Görsel Üretim Hattı</h2>
-        <div class="generator-box">
-            <textarea id="prompt-input" placeholder="Ne çizmemi istersin patron? (Örn: Cyberpunk İstanbul)" rows="3"></textarea>
-            <button id="generate-btn" class="neon-btn">MÜHÜRLE (ÜRET)</button>
+    <section id="ai-gallery" class="gallery-container">
+        <h2 class="neon-text">Yapay Zeka Sergisi</h2>
+        <div class="slider-container">
+            <div class="slider-track" id="slider-track">
+                <div class="slide"><img src="https://image.pollinations.ai/prompt/cyberpunk%20city?width=1024&height=500&nologo=true" alt="AI 1"></div>
+                <div class="slide"><img src="https://image.pollinations.ai/prompt/futuristic%20car?width=1024&height=500&nologo=true" alt="AI 2"></div>
+                <div class="slide"><img src="https://image.pollinations.ai/prompt/robot%20portrait?width=1024&height=500&nologo=true" alt="AI 3"></div>
+            </div> 
+        </div>
+    </section>
+
+    <section id="ai-lab" class="production-section">
+        <h2 class="neon-text">Görsel Üretim Laboratuvarı</h2>
+        <div class="lab-container">
+            <textarea id="prompt-input" placeholder="Hayalindeki görseli buraya yaz patron... (Örn: Uçan arabalar, İstanbul manzarası)" rows="3"></textarea>
+            <button id="generate-image-btn" class="neon-button full-width">MÜHÜRLE VE ÜRET</button>
             
-            <p id="status-text" style="display:none; color: #38bdf8; margin-top:10px;">⌛ Fabrika çalışıyor...</p>
+            <div id="loading-indicator" style="display: none; margin-top: 20px;">
+                <div class="loader"></div>
+                <p>Fabrika çalışıyor...</p>
+            </div>
             
-            <div id="image-container">
-                <img id="result-image" src="" alt="Sonuç Burada Görünecek" style="display: none;">
+            <div id="image-output-container">
+                <p id="image-placeholder">Görsel burada belirecek...</p>
+                <img id="generated-image" src="" alt="Üretilen Görsel">
             </div>
         </div>
     </section>
 
-    <section id="contact" class="container">
-        <h2 class="section-title">Bana Ulaş</h2>
-        <form id="telegram-form">
-            <input type="text" id="name" placeholder="Adın" required>
-            <input type="email" id="email" placeholder="E-posta" required>
-            <textarea id="msg" placeholder="Mesajın" required></textarea>
-            <button type="submit" class="neon-btn">Gönder</button>
+    <section id="iletisim" class="contact-section">
+        <h2 class="neon-text">Mühürlü Mesaj Bırak</h2>
+        <form id="contact-form">
+            <input type="text" placeholder="Adın" required>
+            <input type="email" placeholder="E-posta" required>
+            <textarea placeholder="Mesajın..." rows="5" required></textarea>
+            <button type="submit" class="neon-button">Gönder</button>
         </form>
     </section>
 
+    <div id="ai-chat-widget" class="chat-container">
+        <div class="chat-header">🤖 Asistan</div>
+        <div id="chat-box" class="chat-messages"></div>
+        <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Yaz...">
+            <button onclick="sendMessage()">➤</button>
+        </div>
+    </div>
+
     <footer>
-        <p>&copy; 2026 ÖMER.AI - Her Hakkı Saklıdır.</p>
+        <p>&copy; 2026 ÖMER.AI - Tüm Hakları Saklıdır.</p>
     </footer>
 
     <script src="script.js"></script>
