--- a/index.html
+++ b/index.html
@@ -3,126 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÖMER.AI | Yazılım ve Yapay Zeka Fabrikası</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;500;800&display=swap" rel="stylesheet">
+    <title>ÖMER.AI | Yapay Zeka Fabrikası</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body class="dark-theme">
-
-    <nav class="glass-nav">
-        <div class="nav-container">
-            <div class="logo">ÖMER<span>.AI</span></div>
-            <ul class="nav-links">
-                <li><a href="#home">Ana Sayfa</a></li>
-                <li><a href="#projects">Projeler</a></li>
-                <li><a href="#ai-lab">AI Lab</a></li>
-                <li><a href="#about">Hakkımda</a></li>
-                <li><a href="#contact">İletişim</a></li>
-            </ul>
-            <div class="theme-switcher">
-                <button id="theme-btn" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
-            </div>
+<body>
+    <nav>
+        <div class="theme-switch-wrapper">
+            <button id="theme-toggle" onclick="toggleTheme()">🌓 Mod Değiştir</button>
         </div>
+        <div class="logo">ÖMER.AI</div>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#ai-gallery">AI Sergi</a></li>
+            <li><a href="#ai-lab">AI Laboratuvarı</a></li>
+            <li><a href="#hizmetler">Hizmetler</a></li>
+            <li><a href="#iletisim">İletişim</a></li>
+        </ul>
     </nav>
 
-    <header id="home" class="hero-section">
-        <div class="hero-content">
-            <h1 class="glitch" data-text="YAZILIM FABRİKASI">YAZILIM FABRİKASI</h1>
-            <p class="hero-subtitle">Geleceğin kodlarını mühürlüyor, yapay zeka ile dünyayı yeniden şekillendiriyoruz.</p>
-            <div class="hero-btns">
-                <a href="#projects" class="main-btn">Eserleri İncele</a>
-                <a href="#ai-lab" class="outline-btn">Hemen Üret</a>
-            </div>
-        </div>
-        <div class="hero-overlay"></div>
-    </header>
+    <section id="home" class="hero">
+        <h1>Yazılım ve Yapay Zeka Fabrikası</h1>
+        <p>Geleceği kodla, görselleri mühürle.</p>
+        <button onclick="scrollProjects()" class="neon-button">Projeleri Gör</button>
+    </section>
 
-    <section id="projects" class="section">
-        <div class="container">
-            <h2 class="section-title">PROJELERİM</h2>
-            <div class="projects-grid">
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img">
-                        <img src="img/proje1.jpg" alt="AI Proje 1" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+1'">
-                        <div class="card-overlay"><a href="#">Detayları Gör</a></div>
-                    </div>
-                    <div class="card-body">
-                        <h3>OmerAI-Fabrika V1</h3>
-                        <p>Web tabanlı görüntü işleme ve üretim platformu.</p>
-                    </div>
-                </div>
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img"><img src="img/proje2.jpg" alt="P2" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+2'"></div>
-                    <div class="card-body"><h3>Akıllı Bot Sistemleri</h3><p>Otomatik mesajlaşma ve mühürleme hattı.</p></div>
-                </div>
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img"><img src="img/proje3.jpg" alt="P3" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+3'"></div>
-                    <div class="card-body"><h3>Cyber-Security AI</h3><p>Veri mühürleme ve güvenlik protokolleri.</p></div>
-                </div>
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img"><img src="img/proje4.jpg" alt="P4" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+4'"></div>
-                    <div class="card-body"><h3>Veri Analiz Hattı</h3><p>Büyük veri setleri üzerinde AI mühürleme.</p></div>
-                </div>
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img"><img src="img/proje5.jpg" alt="P5" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+5'"></div>
-                    <div class="card-body"><h3>Mobil AI Vizyon</h3><p>Taşınabilir yapay zeka çözümleri.</p></div>
-                </div>
-                <div class="project-card animate-on-scroll">
-                    <div class="card-img"><img src="img/proje6.jpg" alt="P6" onerror="this.src='https://via.placeholder.com/400x300/1e293b/38bdf8?text=Proje+6'"></div>
-                    <div class="card-body"><h3>Fabrika Entegrasyonu</h3><p>Donanım ve yazılımın muazzam uyumu.</p></div>
-                </div>
+    <section id="ai-gallery" class="gallery-container">
+        <h2 class="neon-text">Yapay Zeka Sergisi</h2>
+        <div class="slider-container">
+            <div class="slider-track" id="slider-track">
+                <div class="slide"><img src="img/proje1.jpg" alt="AI 1"></div>
+                <div class="slide"><img src="img/proje2.jpg" alt="AI 2"></div>
+                <div class="slide"><img src="img/proje3.jpg" alt="AI 3"></div>
+                <div class="slide"><img src="img/proje4.jpg" alt="AI 4"></div>
+                <div class="slide"><img src="img/proje5.jpg" alt="AI 5"></div>
+                <div class="slide"><img src="img/proje6.jpg" alt="AI 6"></div>
+            </div> 
+            <button class="slider-btn prev" onclick="moveSlider(-1)">❮</button>
+            <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
+        </div>
+    </section>
+
+    <section id="ai-lab" class="lab-container">
+        <h2 class="neon-text">Imagen 4.0 Üretim Laboratuvarı</h2>
+        <div class="lab-form-container">
+            <textarea id="prompt-input" placeholder="Hayal ettiğin görseli buraya yaz patron..." rows="4"></textarea>
+            <button id="generate-image-btn" class="neon-button">Görseli Mühürle (Üret)</button>
+            <div id="loading-indicator" class="loading-spinner" style="display: none;"></div>
+        </div>
+        <div id="image-output-container" class="image-output-container">
+            <img id="generated-image" src="" alt="Üretilen Görsel" style="display: none;">
+            <p id="image-placeholder" style="color: var(--text-color); opacity: 0.7;">Üretilen eser burada belirecek...</p>
+        </div>
+    </section>
+
+    <section id="hizmetler" class="services-section">
+        <h2 class="neon-text">Fabrika Çözümleri</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="icon">🧠</i>
+                <h3>Yapay Zeka Modelleme</h3>
+                <p>Gemini ve Imagen 4.0 tabanlı otonom sistemler ve akıllı botlar geliştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🌐</i>
+                <h3>Siberpunk Web Tasarım</h3>
+                <p>Geleceğin estetiğini modern arayüzlerle birleştiriyor, hızlı siteler mühürlüyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🚀</i>
+                <h3>Yazılım Otomasyonu</h3>
+                <p>İş akışlarını hızlandıran, Telegram entegreli özel yazılım çözümleri üretiyoruz.</p>
             </div>
         </div>
     </section>
 
-    <section id="ai-lab" class="section alt-bg">
-        <div class="container">
-            <h2 class="section-title">AI ÜRETİM LABORATUVARI</h2>
-            <div class="lab-wrapper">
-                <div class="lab-controls">
-                    <p>Imagen 4.0 motoru ile sınırsız hayal gücü.</p>
-                    <textarea id="prompt-input" placeholder="Hayal ettiğin sahneyi buraya kodla patron..."></textarea>
-                    <button id="generate-btn" class="glow-btn">MÜHRÜ BAS (ÜRET)</button>
-                </div>
-                <div class="lab-display">
-                    <div id="loading-spinner" class="hidden">
-                        <div class="spinner"></div>
-                        <p>Mühür işleniyor...</p>
-                    </div>
-                    <div id="image-frame">
-                        <p id="frame-placeholder">Üretilen Eser Burada Belirecek</p>
-                        <img id="output-image" class="hidden" alt="AI Output">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section id="iletisim" class="contact-section">
+        <h2 class="neon-text">Mühürlü Mesaj Bırak</h2>
+        <form id="contact-form">
+            <input type="text" placeholder="Adın" required>
+            <input type="email" placeholder="E-posta" required>
+            <textarea placeholder="Mesajın..." required></textarea>
+            <button type="submit" class="neon-button">Mührü Gönder</button>
+        </form>
     </section>
 
-    <section id="contact" class="section">
-        <div class="container">
-            <h2 class="section-title">İLETİŞİM HATTI</h2>
-            <div class="contact-box">
-                <form id="contact-form">
-                    <div class="form-group">
-                        <input type="text" id="name" placeholder="Adınız" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" id="email" placeholder="E-posta Adresiniz" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea id="message" placeholder="Mesajınız..." rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="main-btn full-width">Mesajı Mühürle</button>
-                </form>
-            </div>
+    <div id="ai-chat-widget" class="chat-container">
+        <div class="chat-header">🤖 ÖMER.AI Asistan</div>
+        <div id="chat-box" class="chat-messages"></div>
+        <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Patrona yaz...">
+            <button onclick="sendMessage()">Gönder</button>
         </div>
-    </section>
+    </div>
 
-    <footer class="footer">
-        <p>&copy; 2026 ÖMER.AI | Yazılım Fabrikası. Tüm Hakları Saklıdır.</p>
-    </footer>
-
+    <footer><p>&copy; 2026 ÖMER.AI - Gelecek Burada Mühürlendi.</p></footer>
     <script src="script.js"></script>
 </body>
 </html>
