Update index.html with new content and structure

--- a/index.html
+++ b/index.html
@@ -1,61 +1,108 @@
 <!DOCTYPE html>
-<html lang="tr" data-theme="dark">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÖMER.AI | V49 FABRİKA</title>
+    <title>ÖMER.AI | Yapay Zeka Fabrikası</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <div class="logo">ÖMER.AI V49</div>
+        <div class="theme-switch-wrapper">
+            <button id="theme-toggle" onclick="toggleTheme()">🌓 Mod Değiştir</button>
+        </div>
+        <div class="logo">ÖMER.AI</div>
         <ul>
-            <li><a href="#home">Ana Üs</a></li>
-            <li><a href="#ai-lab">AI Laboratuvarı</a></li>
-            <li><a href="#terminal-section">Terminal</a></li>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#ai-gallery">AI Sergi</a></li>
+            <li><a href="#hizmetler">Hizmetler</a></li>
             <li><a href="#iletisim">İletişim</a></li>
         </ul>
-        <button class="neon-button" onclick="toggleTheme()">🌓 MOD</button>
     </nav>
 
     <section id="home" class="hero">
-        <h1>YAZILIM FABRİKASI</h1>
-        <div class="factory-stats">
-            <div class="stat-item"><span>ANALİZ</span><br><b id="stat-data">1.40 TB</b></div>
-            <div class="stat-item"><span>MÜHÜR</span><br><b id="stat-projects">156</b></div>
-            <div class="stat-item"><span>DURUM</span><br><b style="color: #22c55e;">ONLINE</b></div>
+        <h1>Yazılım ve Yapay Zeka Fabrikası</h1>
+        <p>Geleceği kodla, görselleri mühürle.</p>
+        <button onclick="scrollProjects()" class="neon-button">Projeleri Gör</button>
+    </section>
+
+    <section id="ai-gallery" class="gallery-container">
+        <h2 class="neon-text">Yapay Zeka Sergisi</h2>
+        <div class="slider-container">
+            <div class="slider-track" id="slider-track">
+                <div class="slide"><img src="img/proje1.jpg" alt="AI 1"></div>
+                <div class="slide"><img src="img/proje2.jpg" alt="AI 2"></div>
+                <div class="slide"><img src="img/proje3.jpg" alt="AI 3"></div>
+                <div class="slide"><img src="img/proje4.jpg" alt="AI 4"></div>
+                <div class="slide"><img src="img/proje5.jpg" alt="AI 5"></div>
+                <div class="slide"><img src="img/proje6.jpg" alt="AI 6"></div>
+            </div> 
+            <button class="slider-btn prev" onclick="moveSlider(-1)">❮</button>
+            <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
         </div>
     </section>
 
-    <section id="ai-lab">
-        <h2 class="neon-text">AI ÜRETİM HATTI</h2>
-        <div class="lab-form-container">
-            <textarea id="prompt-input" placeholder="Hayalini Türkçe yaz patron..."></textarea>
-            <button id="generate-image-btn" class="neon-button" onclick="generateImage()">MÜHÜRLE VE ÜRET</button>
-        </div>
-        <div class="image-output-container">
-            <img id="generated-image" style="display:none;">
-            <p id="image-placeholder">Emir Bekleniyor...</p>
-        </div>
-    </section>
-
-    <section id="terminal-section">
-        <h2 class="neon-text">SİSTEM TERMİNALİ</h2>
-        <div class="matrix-terminal">
-            <div id="terminal-output">ÖMER.AI OS [V49] INITIALIZED...</div>
-            <div class="terminal-input-line"><span>></span><input type="text" id="terminal-input"></div>
+    <section id="hakkimda" class="about-section">
+        <h2 class="neon-text">Fabrika Zaman Tüneli</h2>
+        <div class="timeline">
+            <div class="checkpoint">
+                <h3>🚀 Başlangıç</h3>
+                <p>İlk kod mühürlendi, temel atıldı.</p>
+            </div>
+            <div class="checkpoint">
+                <h3>🤖 AI Entegrasyonu</h3>
+                <p>ÖMER.AI asistanı fabrikanın beyni olarak devreye girdi.</p>
+            </div>
+            <div class="checkpoint">
+                <h3>🏭 Seri Üretim</h3>
+                <p>Yapay zeka sergisi ve modern arayüz tamamlandı.</p>
+            </div>
         </div>
     </section>
 
-    <section id="iletisim">
-        <h2 class="neon-text">İLETİŞİM</h2>
+    <section id="hizmetler" class="services-section">
+        <h2 class="neon-text">Fabrika Çözümleri</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="icon">🧠</i>
+                <h3>Yapay Zeka Modelleme</h3>
+                <p>Gemini ve Imagen tabanlı otonom sistemler ve botlar geliştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🌐</i>
+                <h3>Siberpunk Web Tasarım</h3>
+                <p>Geleceğin estetiğini bugünün teknolojisiyle birleştiriyoruz.</p>
+            </div>
+            <div class="service-card">
+                <i class="icon">🚀</i>
+                <h3>Yazılım Otomasyonu</h3>
+                <p>İş akışlarını hızlandıran özel kodlanmış dijital araçlar.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="iletisim" class="contact-section">
+        <h2 class="neon-text">Mühürlü Mesaj Bırak</h2>
         <form id="contact-form">
-            <input type="text" id="contact-name" placeholder="Adınız" required>
-            <input type="email" id="contact-email" placeholder="E-posta" required>
-            <textarea id="contact-message" placeholder="Mesajınız..." required></textarea>
-            <button type="submit" class="neon-button">MÜHRÜ GÖNDER</button>
+            <input type="text" placeholder="Adın veya Şirketin" required>
+            <input type="email" placeholder="E-posta Adresin" required>
+            <textarea placeholder="Proje detaylarını buraya mühürle..." rows="5" required></textarea>
+            <button type="submit" class="neon-button">Mührü Gönder</button>
         </form>
     </section>
+
+    <div id="ai-chat-widget" class="chat-container">
+        <div class="chat-header">🤖 ÖMER.AI Asistan</div>
+        <div id="chat-box" class="chat-messages"></div>
+        <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Patrona mesaj bırak...">
+            <button onclick="sendMessage()">Gönder</button>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 ÖMER.AI - Gelecek Burada Mühürlendi.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
