--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li><a href="#ai-gallery" data-tr="AI Sergi" data-en="AI Gallery">AI Sergi</a></li>
             <li><a href="#ai-lab" data-tr="AI Laboratuvarı" data-en="AI Lab">AI Laboratuvarı</a></li>
             <li><a href="#hizmetler" data-tr="Hizmetler" data-en="Services">Hizmetler</a></li>
+            <li><a href="#fiyatlandirma" data-tr="Fiyatlar" data-en="Pricing">Fiyatlar</a></li>
+            <li><a href="#sss" data-tr="SSS" data-en="FAQ">SSS</a></li>
+            <li><a href="#blog" data-tr="Blog" data-en="Blog">Blog</a></li>
             <li><a href="#testimonials" data-tr="Yorumlar" data-en="Reviews">Yorumlar</a></li>
             <li><a href="#iletisim" data-tr="İletişim" data-en="Contact">İletişim</a></li>
         </ul>
@@ -96,6 +99,70 @@
         </div>
     </section>
 
+    <section id="fiyatlandirma" class="pricing-section">
+        <h2 class="neon-text" data-tr="Fiyatlandırma" data-en="Pricing">Fiyatlandırma</h2>
+        <div class="pricing-grid">
+            <div class="pricing-card">
+                <h3 data-tr="Web Tasarım" data-en="Web Design">Web Tasarım</h3>
+                <p class="price">~5.000₺</p>
+                <ul><li data-tr="Tek sayfa, responsive, hızlı teslimat" data-en="Single page, responsive, fast delivery">Tek sayfa, responsive, hızlı teslimat</li></ul>
+            </div>
+            <div class="pricing-card featured">
+                <h3 data-tr="AI Bot Projesi" data-en="AI Bot Project">AI Bot Projesi</h3>
+                <p class="price">~8.000₺</p>
+                <ul><li data-tr="Chatbot, Telegram entegrasyonu, özelleştirme" data-en="Chatbot, Telegram integration, customization">Chatbot, Telegram entegrasyonu, özelleştirme</li></ul>
+            </div>
+            <div class="pricing-card">
+                <h3 data-tr="Tam Paket" data-en="Full Package">Tam Paket</h3>
+                <p class="price" data-tr="Teklif al" data-en="Get quote">Teklif al</p>
+                <ul><li data-tr="Web + Bot + Otomasyon, özel fiyat" data-en="Web + Bot + Automation, custom price">Web + Bot + Otomasyon, özel fiyat</li></ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="sss" class="faq-section">
+        <h2 class="neon-text" data-tr="Sık Sorulan Sorular" data-en="FAQ">Sık Sorulan Sorular</h2>
+        <div class="faq-list">
+            <details class="faq-item">
+                <summary data-tr="Proje ne kadar sürer?" data-en="How long does a project take?">Proje ne kadar sürer?</summary>
+                <p data-tr="Web projeleri 1-2 hafta, AI bot projeleri 2-3 hafta sürebilir." data-en="Web projects 1-2 weeks, AI bot projects 2-3 weeks.">Web projeleri 1-2 hafta, AI bot projeleri 2-3 hafta sürebilir.</p>
+            </details>
+            <details class="faq-item">
+                <summary data-tr="Destek veriyor musunuz?" data-en="Do you provide support?">Destek veriyor musunuz?</summary>
+                <p data-tr="Teslimattan sonra 1 ay ücretsiz destek." data-en="1 month free support after delivery.">Teslimattan sonra 1 ay ücretsiz destek.</p>
+            </details>
+            <details class="faq-item">
+                <summary data-tr="Ödeme nasıl yapılır?" data-en="How do I pay?">Ödeme nasıl yapılır?</summary>
+                <p data-tr="Havale/EFT veya kredi kartı. %50 ön ödeme ile başlıyoruz." data-en="Bank transfer or credit card. We start with 50% advance.">Havale/EFT veya kredi kartı. %50 ön ödeme ile başlıyoruz.</p>
+            </details>
+            <details class="faq-item">
+                <summary data-tr="Görsel üretimi nasıl çalışır?" data-en="How does image generation work?">Görsel üretimi nasıl çalışır?</summary>
+                <p data-tr="AI Laboratuvarı'nda prompt yazarsın, Gemini Imagen ile görsel üretilir. Ücretsiz deneyebilirsin!" data-en="Write a prompt in AI Lab, Gemini Imagen generates the image. Try it free!">AI Laboratuvarı'nda prompt yazarsın, Gemini Imagen ile görsel üretilir. Ücretsiz deneyebilirsin!</p>
+            </details>
+        </div>
+    </section>
+
+    <section id="blog" class="blog-section">
+        <h2 class="neon-text" data-tr="Blog & Haberler" data-en="Blog & News">Blog & Haberler</h2>
+        <div class="blog-grid">
+            <article class="blog-card">
+                <h4 data-tr="Gemini ile Görsel Üretimi" data-en="Image Generation with Gemini">Gemini ile Görsel Üretimi</h4>
+                <p data-tr="Imagen 4.0 tabanlı görsel üretim laboratuvarımız nasıl çalışıyor?" data-en="How our Imagen 4.0 based image lab works.">Imagen 4.0 tabanlı görsel üretim laboratuvarımız nasıl çalışıyor?</p>
+                <a href="#ai-lab" class="blog-link" data-tr="Dene →" data-en="Try →">Dene →</a>
+            </article>
+            <article class="blog-card">
+                <h4 data-tr="Telegram Bot Entegrasyonu" data-en="Telegram Bot Integration">Telegram Bot Entegrasyonu</h4>
+                <p data-tr="İş akışlarınızı Telegram ile otomatikleştirin." data-en="Automate your workflows with Telegram.">İş akışlarınızı Telegram ile otomatikleştirin.</p>
+                <a href="#iletisim" class="blog-link" data-tr="İletişim →" data-en="Contact →">İletişim →</a>
+            </article>
+            <article class="blog-card">
+                <h4 data-tr="AI Asistan ile Tanış" data-en="Meet the AI Assistant">AI Asistan ile Tanış</h4>
+                <p data-tr="Sohbet botumuz Gemini ile sorularınıza cevap veriyor." data-en="Our chat bot answers your questions with Gemini.">Sohbet botumuz Gemini ile sorularınıza cevap veriyor.</p>
+                <a href="#" onclick="toggleChat(); return false;" class="blog-link" data-tr="Sohbet Et →" data-en="Chat →">Sohbet Et →</a>
+            </article>
+        </div>
+    </section>
+
     <section id="testimonials" class="testimonials-section">
         <h2 class="neon-text" data-tr="Müşteri Yorumları" data-en="Testimonials">Müşteri Yorumları</h2>
         <div class="testimonials-grid">
@@ -141,6 +208,14 @@
             <div class="chat-header">
                 <span>🤖 ÖMER.AI Asistan</span>
                 <button class="chat-close-btn" onclick="toggleChat()" title="Kapat">✕</button>
+            </div>
+            <div class="chat-quick-actions">
+                <button class="quick-btn" onclick="quickAction('görsel')" data-tr="🖼️ Görsel Üret" data-en="🖼️ Generate">🖼️ Görsel Üret</button>
+                <button class="quick-btn" onclick="quickAction('proje')" data-tr="📂 Projeler" data-en="📂 Projects">📂 Projeler</button>
+                <button class="quick-btn" onclick="quickAction('post')" data-tr="📱 Post Yaz" data-en="📱 Write Post">📱 Post Yaz</button>
+                <button class="quick-btn" onclick="quickAction('haber')" data-tr="📰 Haber" data-en="📰 News">📰 Haber</button>
+                <button class="quick-btn" onclick="quickAction('fiyat')" data-tr="💰 Fiyatlar" data-en="💰 Pricing">💰 Fiyatlar</button>
+                <button class="quick-btn" onclick="quickAction('iletisim')" data-tr="✉️ İletişim" data-en="✉️ Contact">✉️ İletişim</button>
             </div>
             <div id="chat-box" class="chat-messages"></div>
             <div class="chat-input">
