--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="#home" data-tr="Ana Sayfa" data-en="Home">Ana Sayfa</a></li>
             <li><a href="#ai-gallery" data-tr="AI Sergi" data-en="AI Gallery">AI Sergi</a></li>
+            <li><a href="#live-stream" data-tr="Canlı Akış" data-en="Live Stream">Canlı Akış</a></li>
             <li><a href="#ai-lab" data-tr="AI Laboratuvarı" data-en="AI Lab">AI Laboratuvarı</a></li>
             <li><a href="#hizmetler" data-tr="Hizmetler" data-en="Services">Hizmetler</a></li>
             <li><a href="#fiyatlandirma" data-tr="Fiyatlar" data-en="Pricing">Fiyatlar</a></li>
@@ -47,6 +48,16 @@
             <button class="slider-btn next" onclick="moveSlider(1)">❯</button>
         </div>
         <div id="generated-gallery" class="generated-gallery-grid"></div>
+    </section>
+
+    <section id="live-stream" class="live-stream-section">
+        <div class="live-stream-header">
+            <span class="live-badge">● LIVE</span>
+            <h2 class="neon-text" data-tr="Canlı AI Üretim Akışı" data-en="Live AI Production Stream">Canlı AI Üretim Akışı</h2>
+        </div>
+        <div class="live-stream-container">
+            <div id="live-stream-track" class="live-stream-track"></div>
+        </div>
     </section>
 
     <section id="ai-lab" class="lab-container">
