--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
         <button class="modal-nav-btn modal-next" onclick="event.stopPropagation(); modalNav(1)">❯</button>
     </div>
 
+    <div class="voice-seal-wrapper">
+        <button class="voice-seal-btn" id="voice-seal-btn" onclick="toggleVoiceSeal()" title="Sesli Komut (Voice Seal)">
+            <span class="voice-icon">🎤</span>
+            <span class="voice-label" data-tr="Sesli Mühür" data-en="Voice Seal">Sesli Mühür</span>
+        </button>
+        <div id="voice-seal-status" class="voice-seal-status" style="display:none;"></div>
+    </div>
+
     <div class="chat-wrapper">
         <button class="chat-toggle-btn" id="chat-toggle-btn" onclick="toggleChat()" title="Sohbeti aç">🤖 Sohbet</button>
         <div id="ai-chat-widget" class="chat-container">
