--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
         </section>
         <section id="blog" class="blog-section footer-section">
             <h2 class="neon-text" data-tr="Blog & Haberler" data-en="Blog & News">Blog & Haberler</h2>
+            <div id="patronun-gundemi" class="patronun-gundemi">
+                <h3 class="patronun-gundemi-title" data-tr="Patronun Gündemi" data-en="Boss's Agenda">Patronun Gündemi</h3>
+                <p id="patronun-gundemi-content" class="patronun-gundemi-content">
+                    <span class="loading-dots" data-tr="Haftalık AI bülteni yükleniyor..." data-en="Loading AI bulletin...">Haftalık AI bülteni yükleniyor...</span>
+                </p>
+                <button id="patronun-gundemi-refresh" class="neon-button patron-refresh-btn" data-tr="Yenile" data-en="Refresh">Yenile</button>
+            </div>
             <div class="blog-grid">
                 <article class="blog-card">
                     <h4 data-tr="Gemini ile Görsel Üretimi" data-en="Image Generation with Gemini">Gemini ile Görsel Üretimi</h4>
