--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
         <button class="modal-nav-btn modal-next" onclick="event.stopPropagation(); modalNav(1)">❯</button>
     </div>
 
+    <div id="system-log" class="system-log" aria-live="polite">
+        <div class="system-log-header" data-tr="SİSTEM GÜNLÜĞÜ" data-en="SYSTEM LOG">SİSTEM GÜNLÜĞÜ</div>
+        <div id="system-log-entries" class="system-log-entries"></div>
+    </div>
     <div class="chat-wrapper">
         <button class="chat-toggle-btn" id="chat-toggle-btn" onclick="toggleChat()" title="Sohbeti aç">🤖 Sohbet</button>
         <div id="ai-chat-widget" class="chat-container">
