--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="vanta-bg" class="vanta-background" aria-hidden="true"></div>
+    <canvas id="dark-matter-canvas" class="dark-matter-bg" aria-hidden="true"></canvas>
     <div id="cursor-glow" class="cursor-glow" aria-hidden="true"></div>
     <nav>
         <div class="theme-switch-wrapper">
